ChangeLog for wpa_supplicant
====================

2008-05-24 Richard Brown <rbrown@exherbo.org>
	* +wpa_supplicant-0.6.3.exheres-0, +ChangeLog,
	+files/wpa_supplicant.conf, +files/wpa_cli.sh: Initial Import